# mitmproxy_rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  build.rs  coverage.sh  dns.py  echo_test_server.py  mitmproxy_wireguard.pyi  pyproject.toml  rustfmt.toml  test.py
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/scripts/: build-macos-redirector.sh  pin-versions.py  release  sign_provision.sh
.github/workflows/: autofix.yml  ci.yml  docs.yml  publish.yml  release.yml  requirements.in  requirements.txt  wheels.yml
apple-tunnel/: raw_packet.proto
apple-tunnel/MitmproxyAppleExtension/: PacketTunnelProvider.swift  raw_packet.pb.swift
apple-tunnel/MitmproxyAppleTunnel/: Constants.swift
apple-tunnel/MitmproxyAppleTunnel.xcodeproj/: project.pbxproj
benches/: .gitignore  contentviews.rs  dns.py  local.conf  nonlocal.conf  plot.py  process.rs  py_data.json  py_data_local.json  py_data_nonlocal.json  py_echo_client.py  py_echo_server.py  syntax_highlight.rs  wg_data.json  wg_data_local.json  wg_data_nonlocal.json  wg_echo_client.py  wg_echo_server.py
ffi/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  stubtest-allowlist.txt  test.py
ffi/mitmproxy_rs/: __init__.py  __init__.pyi
ffi/mitmproxy_rs/_pyinstaller/: hook-mitmproxy_rs.py
ffi/src/: datagram_transport.rs  lib.rs  process_info.rs  server.rs  task.rs  tcp_stream.rs  util.rs
ffi/windivert/: README.md
macos-add-trusted-cert/: Cargo.toml  README.md
macos-add-trusted-cert/macos-add-trusted-cert.app/Contents/: Info.plist
macos-add-trusted-cert/src/.undodir/: %Users%emanuelemicheletti%Documents%GitHub%add_certificate_test%src%main.rs
macos-certificate-truster/: Cargo.toml
macos-certificate-truster/macos-certificate-truster.app/Contents/: Info.plist
macos-certificate-truster/macos-certificate-truster.app/Contents/Resources/: mitmproxy.icns
macos-certificate-truster/src/: main.rs
macos-redirector/: ExportOptions.plist  README.md
macos-redirector-network-ext/MitmproxyAppleExtension/: ipc.pb.swift
macos-redirector/MitmproxyAppleExtension/: PacketTunnelProvider.swift  ipc.pb.swift
macos-redirector/MitmproxyAppleTunnel/: Constants.swift  MitmproxyAppleTunnel.entitlements
macos-redirector/MitmproxyAppleTunnel.xcodeproj/: project.pbxproj
macos-redirector/ipc/: ipc.pb.swift  utils.swift
macos-redirector/macos-redirector/: app.swift  macos_redirector.entitlements
macos-redirector/macos-redirector.xcodeproj/: project.pbxproj
mitmproxy-contentviews/: Cargo.toml  README.md
mitmproxy-contentviews/benches/: contentviews.rs
mitmproxy-contentviews/src/: grpc.rs  hex_dump.rs  hex_stream.rs  lib.rs  msgpack.rs  protobuf.rs  test_inspect_metadata.rs
mitmproxy-contentviews/src/protobuf/: existing_proto_definitions.rs  mod.rs  proto_to_yaml.rs  raw_to_proto.rs  reencode.rs  test.proto  view_grpc.rs  view_protobuf.rs  yaml_to_pretty.rs
mitmproxy-contentviews/testdata/protobuf/: mismatch.proto  nested.proto  simple.proto  simple_package.proto  simple_service.proto
mitmproxy-highlight/: Cargo.toml  README.md
mitmproxy-highlight/benches/: syntax_highlight.rs
mitmproxy-highlight/src/: common.rs  css.rs  javascript.rs  lib.rs  xml.rs  yaml.rs
mitmproxy-linux/: Cargo.toml  README.md  build.rs  pyproject.toml
mitmproxy-linux-ebpf/: Cargo.toml  build.rs
mitmproxy-linux-ebpf-common/: Cargo.toml
mitmproxy-linux-ebpf-common/src/: lib.rs
mitmproxy-linux-ebpf/src/: main.rs
mitmproxy-linux/mitmproxy_linux/: __init__.py
mitmproxy-linux/src/: main.rs  main2.rs
mitmproxy-macos/: .swiftlint.yml  README.md  pyproject.toml
mitmproxy-macos/certificate-truster/: Cargo.toml  README.md
mitmproxy-macos/certificate-truster/src/: main.rs
mitmproxy-macos/redirector/: README.md
mitmproxy-macos/redirector/ipc/: ipc.pb.swift  mitmproxy_ipc.pb.swift  utils.swift
mitmproxy-macos/redirector/macos-redirector/: app.swift  macos_redirector.entitlements
mitmproxy-macos/redirector/macos-redirector.xcodeproj/: project.pbxproj
mitmproxy-macos/redirector/macos-redirector.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
mitmproxy-macos/redirector/macos-redirector.xcodeproj/xcshareddata/xcschemes/: macos-redirector.xcscheme
mitmproxy-macos/redirector/network-extension/: FlowExtensions.swift  Info.plist  InterceptConf.swift  InterceptSpec.swift  PacketTunnelProvider.swift  ProcessInfoCache.swift  TransparentProxyProvider.swift  libproc-Bridging-Header.h  main.swift  network_extension.entitlements
mitmproxy-rs/: Cargo.toml  README.md  dns.py  pyproject.toml  stubtest-allowlist.txt
mitmproxy-rs/mitmproxy_rs/: __init__.py  __init__.pyi  certs.pyi  contentviews.pyi  dns.pyi  local.pyi  process_info.pyi  syntax_highlight.pyi  tun.pyi  udp.pyi  wireguard.pyi
mitmproxy-rs/mitmproxy_rs/_pyinstaller/: hook-mitmproxy_linux.py  hook-mitmproxy_macos.py  hook-mitmproxy_rs.py  hook-mitmproxy_windows.py
mitmproxy-rs/pytests/: logger.rs  test_task.rs
mitmproxy-rs/src/: contentview.rs  contentviews.rs  datagram_transport.rs  dns_resolver.rs  lib.rs  process_info.rs  server.rs  stream.rs  syntax_highlight.rs  task.rs  tcp_stream.rs  udp_client.rs  util.rs
mitmproxy-rs/src/server/: base.rs  local_redirector.rs  mod.rs  tun.rs  udp.rs  wireguard.rs
mitmproxy-windows/: README.md  pyproject.toml
mitmproxy-windows/mitmproxy_windows/: __init__.py
mitmproxy-windows/redirector/: Cargo.toml  README.md
mitmproxy-windows/redirector/src/: main.rs  main2.rs
src/: active_sockets.rs  cfg.rs  conf.rs  dns.rs  intercept_conf.rs  lib.rs  macos.rs  main.rs  messages.rs  network.rs  packet_sources.rs  process.rs  processes.rs  python.rs  server.rs  shutdown.rs  tcp.rs  util.rs  virtual_device.rs  wg.rs  windows.rs  wireguard.rs
test-client/: Cargo.toml
test-client/src/: main.rs
windows-redirector/: Cargo.toml  build.rs
windows-redirector/.cargo/: config.toml
windows-redirector/src/: main.rs  main2.rs  packet.rs
wireguard-test-client/: Cargo.toml  wireguard_echo_test_server.py
wireguard-test-client/src/: main.rs
(+121 files in other folders)
