[workspace]
members = [
    ".",
    "mitmproxy-rs",
    "mitmproxy-windows/redirector",
    "wireguard-test-client",
    "mitmproxy-macos/certificate-truster",
]

[workspace.package]
authors = [
    "Fabio Valentini <decathorpe@gmail.com>",
    "Maximilian Hils <cargo@maximilianhils.com>",
]
version = "0.8.0"
publish = false
repository = "https://github.com/mitmproxy/mitmproxy-rs"
edition = "2021"
rust-version = "1.80"  # MSRV

[package]
name = "mitmproxy"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
log = "0.4.22"
once_cell = "1"
pretty-hex = "0.4.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
smoltcp = "0.11"
tokio = { version = "1.40.0", features = ["macros", "net", "rt-multi-thread", "sync", "time", "io-util", "process"] }
boringtun = { version = "0.6", default-features = false }
x25519-dalek = "2.0.0"
console-subscriber = { version = "0.4.0", optional = true }
image = { version = "0.25.2", default-features = false, features = ["png", "tiff"] }
prost = "0.13.2"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = { version = "0.3.30", features = ["sink"] }
lru_time_cache = "0.11.11"
internet-packet = { version = "0.2.0", features = ["smoltcp"] }
data-encoding = "2.4.0"
hickory-resolver = "0.24.1"
socket2 = "0.5.7"

[patch.crates-io]
# tokio = { path = "../tokio/tokio" }
smoltcp = { git = 'https://github.com/smoltcp-rs/smoltcp', rev = 'ef67e7b46cabf49783053cbf68d8671ed97ff8d4' }
boringtun = { git = 'https://github.com/cloudflare/boringtun', rev = 'e3252d9c4f4c8fc628995330f45369effd4660a1' }

[target.'cfg(windows)'.dependencies.windows]
version = "0.57.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11.1"
nix = { version = "0.29.0", default-features = false, features = ["fs"] }
core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"
sysinfo = "0.29.10"

[dev-dependencies]
env_logger = "0.11"
rand = "0.8"
criterion = "0.5.1"
hickory-server = "0.24.1"


[[bench]]
name = "process"
harness = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[features]
tracing = ["console-subscriber"]
