[build-system]
requires = ["maturin>=0.12.15,<0.13"]
build-backend = "maturin"

[project]
name = "mitmproxy_wireguard"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
