[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "mitmproxy_wireguard"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
]

[tool.maturin]
# include files manually to keep cargo workspace functional:
# https://github.com/PyO3/maturin/issues/1226
sdist-include = ["test-client/Cargo.toml", "test-client/src/*.rs"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
