[package]
name = "mitmproxy_rs"
version = "0.1.18"
edition = "2021"
rust-version = "1.65.0"

exclude = [
    "/.github/",
    "/benches/",
    "/dist/",
    "/venv/",
    "/PUBLISHING.md",
    "/architecture.png",
    "/coverage.sh",
    "/echo_test_server.py",
    "/rustfmt.toml",
]

[lib]
name = "mitmproxy_rs"
crate-type = ["cdylib"]

[dependencies]
mitmproxy = { path = "../" }
anyhow = "1.0.56"
base64 = "0.13"
boringtun = { version = "0.5", default-features = false }
log = "0.4.16"
once_cell = "1"
pretty-hex = "0.3.0"
pyo3 = { version = "0.17.2", features = ["abi3", "abi3-py37", "extension-module", "anyhow"] }
pyo3-asyncio = { version = "0.17", features = ["tokio-runtime"] }
pyo3-log = "0.7"
rand_core = { version = "0.6.3", features = ["getrandom"] }
smoltcp = "0.8"
tokio = { version = "1.17", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
x25519-dalek = "2.0.0-pre.1"
bincode = "2.0.0-rc.2"

# optional dependencies for tracing support
console-subscriber = { version = "0.1.4", optional = true }
async-trait = "0.1.58"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]


[dev-dependencies]
env_logger = "0.9"
rand = "0.8"

[features]
tracing = ["console-subscriber"]
