[package]
name = "mitmproxy_rs"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "mitmproxy_rs"
crate-type = ["cdylib"]

[dependencies]
mitmproxy = { path = "../" }
anyhow = { version = "1.0.66", features = ["backtrace"] }
base64 = "0.13"
log = "0.4.17"
once_cell = "1"
pyo3 = { version = "0.17.3", features = ["abi3", "abi3-py39", "extension-module", "anyhow"] }
pyo3-asyncio = { version = "0.17", features = ["tokio-runtime"] }
pyo3-log = "0.7"
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio = { version = "1.22", features = ["macros", "net", "rt-multi-thread", "sync"] }
x25519-dalek = "2.0.0-pre.1"

# optional dependencies for tracing support
console-subscriber = { version = "0.1.8", optional = true }


[dev-dependencies]
env_logger = "0.9"

[features]
tracing = ["console-subscriber"]
