[package]
name = "macos-add-trusted-cert"
license = "LGPL-3.0-or-later"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
security-framework = { git="https://github.com/emanuele-em/rust-security-framework", branch = "main"}
