[package]
name = "macos-certificate-truster"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
security-framework = { git="https://github.com/emanuele-em/apple-security", rev = "eb6abf2dabe3881620436eba952750600bef267b"}
