[package]
name = "mitmproxy-contentviews"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
log = "0.4.28"
data-encoding = "2.8.0"
pretty-hex = "0.4.1"
mitmproxy-highlight = { path = "../mitmproxy-highlight" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rmp-serde = "1.1"
protobuf = "3.7.2"
regex = "1.11.3"
flate2 = "1.1"
protobuf-parse = "3.7"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "contentviews"
harness = false
