[package]
name = "mitmproxy-highlight"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
tree-sitter = "0.25.10"
tree-sitter-css = "0.25.0"
tree-sitter-highlight = "0.25.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.1"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "syntax_highlight"
harness = false
