[package]
name = "mitmproxy-linux-ebpf-common"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }
aya-ebpf = { workspace = true }

[lib]
path = "src/lib.rs"
