[package]
name = "mitmproxy-linux-ebpf"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
mitmproxy-linux-ebpf-common = { path = "../mitmproxy-linux-ebpf-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = "7.0.2"

[[bin]]
name = "mitmproxy-linux"
path = "src/main.rs"
