[package]
name = "mitmproxy-linux"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "mitmproxy-linux-redirector"
path = "src/main.rs"

[target.'cfg(target_os = "linux")'.dependencies]
mitmproxy = { path = "../" }
mitmproxy-linux-ebpf-common = { path = "../mitmproxy-linux-ebpf-common"}
tun = { workspace = true, features = ["async"] }
aya = { workspace = true }
aya-log = { workspace = true }
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "sync", "io-util", "signal"] }
anyhow = { version = "1.0.97", features = ["backtrace"] }
log = "0.4.27"
env_logger = "0.11.5"
prost = "0.13.5"
internet-packet = { version = "0.2.0", features = ["checksums"] }
libc = "0.2.170"
const-sha1 = "0.3.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
aya-build = "0.1.2"
mitmproxy-linux-ebpf = { path = "../mitmproxy-linux-ebpf" }

[target.'cfg(target_os = "linux")'.dev-dependencies]
hex = "0.4.3"

[features]
root-tests = []
