[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mitmproxy-macos"
dynamic = ["version"]
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"

[project.urls]
Source = "https://github.com/mitmproxy/mitmproxy-rs"

[tool.hatch.build]
only-include = ["mitmproxy_macos"]

[tool.hatch.version]
path = "./version-info.toml"
pattern = "version = \"(?P<version>.+?)\""

[tool.hatch.build.force-include]
# "../target/release/macos-certificate-truster" = "mitmproxy_macos/macos-certificate-truster.app/Contents/MacOS/macos-certificate-truster"
"./redirector/dist/Mitmproxy Redirector.app.tar" = "mitmproxy_macos/Mitmproxy Redirector.app.tar"
"../Cargo.toml" = "./version-info.toml"
