[package]
name = "mitmproxy_rs"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "mitmproxy_rs"
crate-type = ["lib", "cdylib"]

[dependencies]
mitmproxy = { path = "../" }
anyhow = { version = "1.0.86", features = ["backtrace"] }
data-encoding = "2.6.0"
log = "0.4.22"
once_cell = "1"
pyo3 = { version = "0.21", features = ["abi3", "abi3-py310", "anyhow", "experimental-declarative-modules"] }
pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime", "testing", "attributes"] }
pyo3-log = "0.11.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread", "sync"] }
boringtun = "0.6"
tar = "0.4.41"
console-subscriber = { version = "0.4.0", optional = true }


[dev-dependencies]
env_logger = "0.11"

[features]
tracing = ["console-subscriber"]

[[test]]
name = "test_task"
path = "pytests/test_task.rs"
harness = false