[package]
name = "mitmproxy_rs"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "mitmproxy_rs"
crate-type = ["lib", "cdylib"]

[dependencies]
mitmproxy = { path = "../" }
anyhow = { version = "1.0.93", features = ["backtrace"] }
data-encoding = "2.6.0"
log = "0.4.22"
once_cell = "1"
pyo3 = { version = "0.23", features = ["abi3", "abi3-py310", "anyhow"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime", "testing", "attributes"] }
pyo3-log = "0.12.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio = { version = "1.41", features = ["macros", "net", "rt-multi-thread", "sync"] }
boringtun = "0.6"
tar = "0.4.43"
console-subscriber = { version = "0.4.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29.0", features = ["user"] }

[dev-dependencies]
env_logger = "0.11"

[features]
tracing = ["console-subscriber"]
docs = []

[[test]]
name = "test_task"
path = "pytests/test_task.rs"
harness = false
