[package]
name = "mitmproxy_rs"
license = "MIT"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "mitmproxy_rs"
crate-type = ["lib", "cdylib"]

[dependencies]
mitmproxy = { path = "../" }
mitmproxy-highlight = { path = "../mitmproxy-highlight" }
mitmproxy-contentviews = { path = "../mitmproxy-contentviews" }
anyhow = { version = "1.0.97", features = ["backtrace"] }
data-encoding = "2.8.0"
log = "0.4.27"
pyo3 = { version = "0.25", features = ["abi3", "abi3-py312", "anyhow"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime", "testing", "attributes"] }
pyo3-log = "0.12"
rand_core = { version = "0.6.4", features = ["getrandom"] }  # https://github.com/dalek-cryptography/curve25519-dalek/issues/731
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "sync"] }
boringtun = "0.6"
tar = "0.4.44"
console-subscriber = { version = "0.4.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.1", features = ["user"] }

[dev-dependencies]
env_logger = "0.11"

[features]
tracing = ["console-subscriber"]
docs = []

[[test]]
name = "test_task"
path = "pytests/test_task.rs"
harness = false
