[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "mitmproxy_rs"
dynamic = ["version"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "mitmproxy_windows; os_name == 'nt'",
    "mitmproxy_linux; sys_platform == 'linux'",
    "mitmproxy_macos; sys_platform == 'darwin'",
]

[tool.black]
line-length = 140
include = '\.pyi?$'

[project.entry-points.pyinstaller40]
hook-dirs = "mitmproxy_rs._pyinstaller:hook_dirs"

[tool.mypy]
exclude = [
    'mitmproxy_rs/_pyinstaller'
]

# https://pyo3.rs/v0.22.2/faq.html?highlight=cargo%20test#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
[tool.maturin]
features = ["pyo3/extension-module"]
