[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mitmproxy-windows"
dynamic = ["version"]
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Source = "https://github.com/mitmproxy/mitmproxy-rs"

[tool.hatch.build]
only-include = ["mitmproxy_windows"]
exclude = ["mitmproxy_windows/editable.marker"]

[tool.hatch.version]
path = "../Cargo.toml"
pattern = "version = \"(?P<version>.+?)\""

[tool.hatch.build.force-include]
"../target/release/windows-redirector.exe" = "mitmproxy_windows/windows-redirector.exe"
