[package]
name = "mitm-wg-test-client"
description = "Test client for mitmproxy_wireguard"
license = "MIT"
publish = false

version = "0.1.6"
edition = "2021"
rust-version = "1.56.0"

authors = [
    "Fabio Valentini <decathorpe@gmail.com>",
    "Maximilian Hils <cargo@maximilianhils.com>",
]

[dependencies]
anyhow = "1.0.56"
base64 = "0.13"
boringtun = { version = "0.5", default-features = false }
hex = "0.4"
smoltcp = "0.8"
x25519-dalek = "2.0.0-pre.1"
