[package]
name = "windows-redirector"
license = "LGPL-3.0-or-later"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mitmproxy = { path = "../" }
bincode.workspace = true
tokio = { version = "1.23", features = ["macros", "net", "rt-multi-thread", "sync", "io-util"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
windivert = "0.5.5"
lru_time_cache = "0.11.11"
log = "0.4.17"
env_logger = "0.10.0"
internet-checksum = "0.2.1"

[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
ProductName = "Mitmproxy Redirector"
FileDescription = "Transparently redirect traffic to a mitmproxy instance"
