[package]
name = "windows-redirector"
license = "LGPL-3.0-or-later"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
mitmproxy = { path = "../" }
bincode.workspace = true
tokio = { version = "1.23", features = ["macros", "net", "rt-multi-thread", "sync", "io-util"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
windivert = "0.6.0"
lru_time_cache = "0.11.11"
log = "0.4.18"
env_logger = "0.10.0"
internet-packet = { git = "https://github.com/mhils/internet-packet.git", features = ["checksums"] }

[target.'cfg(windows)'.dev-dependencies]
hex = "0.4.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
ProductName = "Mitmproxy Redirector"
FileDescription = "Transparently redirect traffic to a mitmproxy instance"

[features]
vendored = ["windivert/vendored"]
