[package]
name = "mitm-wg-test-client"
license = "MIT"
description = "Test client for mitmproxy_rs's WireGuard functionality"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.68"
base64 = "0.21"
boringtun = { version = "0.5", default-features = false }
hex = "0.4"
smoltcp = "0.8"
x25519-dalek = "2.0.0-pre.1"
