[package]
name = "mitm-wg-test-client"
license = "MIT"
description = "Test client for mitmproxy_rs's WireGuard functionality"
authors.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
data-encoding = "2.8.0"
boringtun = "0.6"
hex = "0.4"
smoltcp = "0.12"
